<resources>
    <string name="app_name" translatable="false">Kandroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_serverurl">URL to Kanboard server</string>
    <string name="prompt_apikey">API Key for Kanboard server</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign">Sign in</string>
    <string name="error_server_url">Unable to contact server</string>
    <string name="error_server_resonse">Invalid response from server.\nPlease check URL.</string>
    <string name="error_host_unknown">Unknown host</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_wrong_kanboard_version">This server uses a version below %1$d.%2$d.%3$d. Please upgrade.</string>
    <string name="error_ssl">Failed to establish an encrypted connection.\nReason: %s</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_projects">Projects</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_overdue">Overdue Tasks</string>
    <string name="action_about">About</string>
    <string name="dlg_devel_version">This server is running a development version of Kanboard. Kandroid might not work with this server.</string>
    <string name="title_activity_about">About Kandroid v%s</string>
    <string name="txt_about" translatable="false">A JSON RPC client for http://kanboard.net\n\nCopyright © 2016-2017 Thomas Andres\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n        \nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program.  If not, see http://www.gnu.org/licenses.\n\n\nLibraries:\n\nhttps://commons.apache.org/proper/commons-lang\n(Apache License, Version 2.0)\n\nhttps://github.com/atlassian/commonmark-java\n(BSD 2-clause)\n\nhttps://github.com/the-blue-alliance/spectrum\n(MIT)\n\nhttp://acra.ch/\n(Apache License, Version 2.0)\n\nhttp://emojione.com\n(CC BY 4.0)</string>
    <string name="settings_cat_projects">Projects</string>
    <string name="settings_cat_crash">Crash reports</string>
    <string name="setting_sort_projects">Sort projects alphabeticaly</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_enable_acra">Send crash reports</string>
    <string name="pref_acra_enabled">Crash reports are sent</string>
    <string name="pref_acra_disabled">Crash reports are not sent</string>
    <string name="pref_acra_user_email">Email address</string>
    <string name="pref_acra_user_email_summary">Email address to be included in the reports</string>
    <string name="pref_acra_alwaysaccept">Send reports automatically</string>
    <string name="pref_acra_alwaysaccept_enabled">Reports are sent automatically</string>
    <string name="pref_acra_alwaysaccept_disabled">Send reports must be confirmed</string>
    <string name="tab_projects">My Projects &amp; Tasks</string>
    <string name="tab_overdue_tasks">Overdue Tasks</string>
    <string name="tab_activity">Activities</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_inactive_tasks">Inactive Tasks</string>
    <string name="hint_swimlane_deactivated">Some swimlanes are deactivated</string>
    <string name="error_swimlanes_deactivated">All swimlanes are deactivated!\nPlease enable at least one swimlane.</string>
    <string name="caption_name">Name:</string>
    <string name="caption_description"><big><b><u>Description</u></b></big></string>
    <string name="caption_tasks"><big><b><u>Tasks</u></b></big></string>
    <string name="caption_columns"><big><b><u>Columns</u></b></big></string>
    <string name="caption_swimlanes"><big><b><u>Swimlanes</u></b></big></string>
    <string name="caption_modify_date"><big><b><u>Last modified</u></b></big></string>
    <string name="caption_project_members"><big><b><u>Project Members</u></b></big></string>
    <string name="error_no_list_data">No data available!\nPlease hit refresh.</string>
    <plurals name="format_nb_tasks">
        <item quantity="one">%d Task</item>
        <item quantity="other">%d Tasks</item>
    </plurals>
    <plurals name="format_overdue_days">
        <item quantity="one">%d day overdue</item>
        <item quantity="other">%d days overdue</item>
    </plurals>
    <plurals name="format_overdue_hours">
        <item quantity="one">%d hour overdue</item>
        <item quantity="other">%d hours overdue</item>
    </plurals>
    <plurals name="format_nb_active_tasks">
        <item quantity="one">%d active task</item>
        <item quantity="other">%d active tasks</item>
    </plurals>
    <plurals name="format_nb_inactive_tasks">
        <item quantity="one">%d inactive task</item>
        <item quantity="other">%d inactive tasks</item>
    </plurals>
    <plurals name="format_nb_overdue_tasks">
        <item quantity="one">%d overdue task</item>
        <item quantity="other">%d overdue tasks</item>
    </plurals>
    <plurals name="format_nb_total_tasks">
        <item quantity="one">%d task total</item>
        <item quantity="other">%d tasks total</item>
    </plurals>
    <string name="taskview_category"><![CDATA[<b>Category:</b> %s]]></string>
    <string name="taskview_status"><![CDATA[<b>Status:</b> %s]]></string>
    <string name="taskview_status_open">open</string>
    <string name="taskview_status_closed">closed</string>
    <string name="taskview_swimlane"><![CDATA[<b>Swimlane:</b> %s]]></string>
    <string name="taskview_position"><![CDATA[<b>Position:</b> %d]]></string>
    <string name="taskview_priority"><![CDATA[<b>Priority:</b> %d]]></string>
    <string name="taskview_owner"><![CDATA[<b>Owner:</b> %s]]></string>
    <string name="taskview_creator"><![CDATA[<b>Creator:</b> %s]]></string>
    <string name="taskview_date_created"><![CDATA[<b>Created:</b> %tF]]></string>
    <string name="taskview_date_modified"><![CDATA[<b>Modified:</b> %tF]]></string>
    <string name="taskview_date_moved"><![CDATA[<b>Moved:</b> %tF]]></string>
    <string name="taskview_hours_estimated"><![CDATA[<b>Hours estimated:</b> %.2fh]]></string>
    <string name="taskview_hours_spent"><![CDATA[<b>Hours spent:</b> %.2fh]]></string>
    <string name="taskview_date_start"><![CDATA[<b>Start date:</b> %tF]]></string>
    <string name="taskview_date_due"><![CDATA[<b>Due date:</b> %tF]]></string>
    <string name="taskview_caption_information"><big><b><u>Information</u></b></big></string>
    <string name="taskview_caption_timetracking"><big><b><u>Timetracking</u></b></big></string>
    <string name="taskview_caption_comments"><big><b><u>Comments</u></b></big></string>
    <string name="taskview_caption_files"><big><b><u>Files</u></b></big></string>
    <string name="taskview_caption_description"><big><b><u>Description</u></b></big></string>
    <string name="taskview_caption_subtask"><big><b><u>Subtasks</u></b></big></string>
    <string name="taskview_fab_new_comment">New Comment</string>
    <string name="taskview_dlg_update_comment">Edit Comment</string>
    <string name="taskview_fab_new_subtask">New Subtask</string>
    <string name="taskview_dlg_update_subtask">Edit Subtask</string>
    <string name="taskview_fab_close_task">Close Task</string>
    <string name="taskview_fab_open_task">Open Task</string>
    <string name="taskview_fab_remove_task">Delete Task</string>
    <string name="taskview_fab_edit_task">Edit Task</string>
    <string name="taskview_fab_change_column">Change Column</string>
    <string name="taskview_fab_change_swimlane">Change Swimlane</string>
    <string name="task_not_assigned">not assigned</string>
    <string name="subtask_dlg_owner">Owner:</string>
    <string name="subtask_dlg_title">Title:</string>
    <string name="delete_dlg_message">Are you sure?</string>
    <string name="delete_dlg_task">Delete Task</string>
    <string name="delete_dlg_subtask">Delete Subtask</string>
    <string name="delete_dlg_comment">Delete Comment</string>
    <string name="delete_dlg_file">Delete File</string>
    <string name="error_msg_remove_task">Error while removing task!</string>
    <string name="error_msg_remove_File">Error while deleting file!</string>
    <string name="error_msg_open_task">Error while opening task!</string>
    <string name="error_msg_close_task">Error while closing task!</string>
    <string name="error_msg_create_comment">Error while removing task!</string>
    <string name="error_msg_update_comment">Error while creating comment!</string>
    <string name="error_msg_remove_comment">Error while updating comment!</string>
    <string name="error_msg_create_subtask">Error while creating subtask!</string>
    <string name="error_msg_update_subtask">Error while updating subtask!</string>
    <string name="error_msg_remove_subtask">Error while removing subtask!</string>
    <string name="error_msg_not_implemented">Function not yet implemented!</string>
    <string name="taskedit_new_task">New Task</string>
    <string name="taskedit_save">Save</string>
    <string name="taskedit_project_title">Title</string>
    <string name="taskedit_project_description">Description</string>
    <string name="taskedit_clear_date">Clear</string>
    <string name="taskedit_owner">Owner:</string>
    <string name="taskedit_priority">Priority:</string>
    <string name="taskedit_column">Column:</string>
    <string name="taskedit_color"><![CDATA[<b>Color:</b> %s]]></string>
    <string name="taskedit_seclect_color">Select a color</string>
    <string name="toast_wait_loading">Please wait. Still loading data.</string>
    <string name="permission_storage_granted">Storage permission was granted, please start the download again.</string>
    <string name="permission_storage_denied">Storage permission was denied.</string>
    <string name="error_no_sdcard">No storage device available.</string>
    <string name="action_edit">Edit</string>
    <string name="action_download">Download</string>
    <string name="action_delete">Delete</string>
    <string name="menu_caption_comment">Comment #%d</string>
    <string name="menu_caption_subtask">Comment #%d</string>
    <string name="menu_caption_file">File #%d</string>
    <string name="service_downloading">Downloading file…</string>
    <string name="service_result_empty">Couldn\'t download file!</string>
    <string name="error_base64_decode">Unable to decode file.</string>
    <string name="download_manager_name">Kandroid file</string>
    <string name="acra_send_mail" translatable="false">Send email</string>
    <string name="acra_dialog_title" translatable="false">Kandroid has crashed</string>
    <string name="acra_dialog_comment_prompt" translatable="false">You might add your comments about the problem below:</string>
</resources>