<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardview_vertical_margin"
            android:layout_marginBottom="@dimen/cardview_vertical_margin"
            app:cardCornerRadius="@dimen/cardview_radius"
            app:contentPadding="@dimen/cardview_padding">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/caption_description"/>
                <TextView
                    android:id="@+id/project_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Description"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardview_vertical_margin"
            android:layout_marginBottom="@dimen/cardview_vertical_margin"
            app:cardCornerRadius="@dimen/cardview_radius"
            app:contentPadding="@dimen/cardview_padding">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/caption_project_members"/>
                <TextView
                    android:id="@+id/project_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Members"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardview_vertical_margin"
            android:layout_marginBottom="@dimen/cardview_vertical_margin"
            app:cardCornerRadius="@dimen/cardview_radius"
            app:contentPadding="@dimen/cardview_padding">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/caption_modify_date"/>
                <TextView
                    android:id="@+id/project_modify_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Modified"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardview_vertical_margin"
            android:layout_marginBottom="@dimen/cardview_vertical_margin"
            app:cardCornerRadius="@dimen/cardview_radius"
            app:contentPadding="@dimen/cardview_padding">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/caption_tasks"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Aktive Aufgaben"
                    android:id="@+id/project_active_tasks"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Nicht aktive Aufgaben"
                    android:id="@+id/project_inactive_tasks"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="überfällige Aufgaben"
                    android:id="@+id/project_overdue_tasks"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Aufgaben gesamt"
                    android:id="@+id/project_total_tasks"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardview_vertical_margin"
            android:layout_marginBottom="@dimen/cardview_vertical_margin"
            app:cardCornerRadius="@dimen/cardview_radius"
            app:contentPadding="@dimen/cardview_padding">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/caption_columns"/>
                <TextView
                    android:id="@+id/project_columns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Columns"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardview_vertical_margin"
            android:layout_marginBottom="@dimen/cardview_vertical_margin"
            app:cardCornerRadius="@dimen/cardview_radius"
            app:contentPadding="@dimen/cardview_padding">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/caption_swimlanes"/>
                <TextView
                    android:id="@+id/project_swimlanes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Columns"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
